<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    android:scrollbars="none"
    tools:context=".fragments.NewPasswordFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/dimen20"
        android:layout_marginVertical="@dimen/dimen16"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_logo" />

        <TextView
            android:id="@+id/tvSignIn"
            style="@style/poppins_semibold_600_24sp_primary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dimen50"
            android:text="@string/enter_new_password" />

        <TextView
            android:id="@+id/tvDescription"
            style="@style/poppins_regular_400_14sp_dark_grey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen20"
            android:layout_marginTop="@dimen/dimen16"
            android:gravity="center"
            android:text="@string/lorem_ipsum_dolor_sit_amet_consectetur" />

        <LinearLayout
            android:id="@+id/LlNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen40"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDescription">

            <TextView
                style="@style/poppins_medium_500_14sp_textBlack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen20"
                android:layout_marginBottom="-10dp"
                android:background="@color/white"
                android:elevation="0.1dp"
                android:paddingHorizontal="@dimen/dimen8"
                android:text="@string/new_password" />

            <EditText
                android:id="@+id/etNewPassword"
                style="@style/poppins_medium_500_14sp_textBlack"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen44"
                android:background="@drawable/edit_text_background"
                android:gravity="start|top"
                android:hint="@string/enter_new_passwords"
                android:inputType="textPassword"
                android:padding="@dimen/dimen10"
                android:textColor="@color/primary"
                android:textColorHint="@color/hint" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LlConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen24"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDescription">

            <TextView
                style="@style/poppins_medium_500_14sp_textBlack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen20"
                android:layout_marginBottom="-10dp"
                android:background="@color/white"
                android:elevation="0.1dp"
                android:paddingHorizontal="@dimen/dimen8"
                android:text="@string/confirm_password" />

            <EditText
                android:id="@+id/etConfirmPassword"
                style="@style/poppins_medium_500_14sp_textBlack"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen44"
                android:background="@drawable/edit_text_background"
                android:gravity="start|top"
                android:hint="@string/enter_confirm_password"
                android:inputType="textPassword"
                android:padding="@dimen/dimen10"
                android:textColor="@color/primary"
                android:textColorHint="@color/hint" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnChange"
            style="@style/poppins_bold_700_14sp_white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen24"
            android:background="@drawable/solid_primary_25"
            android:text="@string/change"
            android:textAllCaps="false"
            android:textColor="@color/white" />

    </LinearLayout>

</ScrollView>