<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    android:scrollbars="none"
    tools:context=".fragments.SignInFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen20"
        android:layout_marginVertical="@dimen/dimen16"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_logo" />

        <TextView
            android:id="@+id/tvSignIn"
            style="@style/poppins_semibold_600_24sp_primary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dimen50"
            android:text="@string/sign_in" />

        <TextView
            android:id="@+id/tvDescription"
            style="@style/poppins_regular_400_14sp_dark_grey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen20"
            android:layout_marginTop="@dimen/dimen16"
            android:gravity="center"
            android:text="@string/we_will_send_you_a_one_time_password_to_this_mobile_number" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <AutoCompleteTextView
                android:id="@+id/tvCountryCode"
                style="@style/poppins_medium_500_16sp_primary"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dimen44"
                android:layout_gravity="bottom"
                android:background="@drawable/stroke_light_grey_10"
                android:completionThreshold="1"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:dropDownWidth="wrap_content"
                android:gravity="center"
                android:paddingHorizontal="@dimen/dimen12"
                android:text="+91"
                android:textColor="@color/textBlack" />

            <LinearLayout
                android:id="@+id/LlMobileNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="@dimen/dimen40"
                android:orientation="vertical">

                <TextView
                    style="@style/poppins_medium_500_14sp_textBlack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen20"
                    android:layout_marginBottom="-10dp"
                    android:background="@color/white"
                    android:elevation="0.1dp"
                    android:paddingHorizontal="@dimen/dimen8"
                    android:text="@string/mobile_number" />

                <EditText
                    android:id="@+id/etPhone"
                    style="@style/poppins_medium_500_14sp_textBlack"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen44"
                    android:background="@drawable/edit_text_background"
                    android:digits="0987654321"
                    android:gravity="start|top"
                    android:hint="@string/enter_mobile_number"
                    android:inputType="number"
                    android:maxLength="10"
                    android:padding="@dimen/dimen10"
                    android:textColor="@color/primary"
                    android:textColorHint="@color/hint" />

            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/LlPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen24"
            android:orientation="vertical">

            <TextView
                style="@style/poppins_medium_500_14sp_textBlack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen20"
                android:layout_marginBottom="-10dp"
                android:background="@color/white"
                android:elevation="0.1dp"
                android:paddingHorizontal="@dimen/dimen8"
                android:text="@string/password" />

            <EditText
                android:id="@+id/etPassword"
                style="@style/poppins_medium_500_14sp_textBlack"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen44"
                android:background="@drawable/edit_text_background"
                android:gravity="start|top"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:padding="@dimen/dimen10"
                android:textColor="@color/primary"
                android:textColorHint="@color/hint" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvForgotPassword"
            style="@style/poppins_medium_500_16sp_primary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/dimen14"
            android:text="@string/forgot_password"
            app:layout_constraintEnd_toEndOf="@+id/tilPassword"
            app:layout_constraintTop_toBottomOf="@id/tilPassword" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignIn"
            style="@style/poppins_bold_700_14sp_white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen24"
            android:background="@drawable/solid_primary_25"
            android:text="@string/sign_in"
            android:textAllCaps="false" />

    </LinearLayout>

</ScrollView>